# CryptBot

./: README.md  pyproject.toml  requirements.txt
src/: main.py
src/cryptbot/commands/: command_pack.py
src/cryptbot/commands/base_commands/: help.py  start.py
src/cryptbot/commands/management_commands/project_management_commands/: add_project.py
src/cryptbot/commands/management_commands/scope_management_commands/: add_to_scope.py
src/cryptbot/config/: config.py
src/cryptbot/db/: database.py
src/cryptbot/db/models/base/: project.py
src/cryptbot/superficial/strings/: message_text.py
